refactor!: replace Jackson2 with Jackson3